refactor: remove layout package and its components
- Deleted the layout package including all its components such as NavPage, Page, SidePage, and Loading.
- Removed associated styles, utility functions, and configuration files.
- Cleaned up package.json and TypeScript configuration files related to the layout package.

--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -206,7 +206,7 @@
     </p>
 
     <div class="demos">
-      <a href="http://localhost:5173" class="demo-card vue" target="_blank">
+      <a href="./vue/" class="demo-card vue">
         <div class="icon">
           <svg viewBox="0 0 256 221">
             <path d="M204.8 0H256L128 220.8L0 0h97.92L128 51.2L157.44 0H204.8z" fill="white"/>
@@ -216,7 +216,7 @@
         <p>Vue 3 + Composition API</p>
       </a>
 
-      <a href="http://localhost:5174" class="demo-card react" target="_blank">
+      <a href="./react/" class="demo-card react">
         <div class="icon">
           <svg viewBox="0 0 256 228">
             <circle cx="128" cy="114" r="24" fill="white"/>
